# diophantine-fable

./: .gitignore  README.md  pyproject.toml
experiments/: census.py  cubic_orbit_prototype.py  hall_ratios.py  mordell_min_height.py  pell_growth.py  thue_unit_growth.py
experiments/data/: census_specimens.jsonl  census_stats.json  cubic_unit_records.csv  hall_records.csv  mordell_min_heights.csv  pell_records.csv
notes/: A1.md  A1v2-cubic-thue.md  AM-errata.md  HBH-NP-assembly.md  cubic-thue-np-certificate.md  frontier.md  log.md  synthesis.md  thue-exp-theorem.md  trackB-hardness.md
notes/citations/: 2026-07-20-frontier-verification.json  2026-07-21-a1v2-verification.json  2026-07-22-assembly-extraction.json
papers/: Makefile  cubic-thue-certificates.md  cubic-thue-certificates.tex  cubic-thue-exp.md  cubic-thue-exp.tex
scripts/: verify_am_erratum.py  verify_jc_counterexample.py
smale5/: __init__.py  __main__.py  budget.py  classify.py  decision.py  poly.py
smale5/families/: __init__.py
smale5/solvers/: deg2fiber.py  graph.py  linear.py  local.py  pell.py  pipeline.py  quadratic.py  search.py  thue_pari.py
tests/: test_classify.py  test_deg2fiber.py  test_graph.py  test_pipeline.py  test_poly.py  test_solvers.py
